Fixed spacing so that box-shadows show properly in chromatic

--- a/.storybook/styles.css
+++ b/.storybook/styles.css
@@ -71,6 +71,7 @@ body,
 .isb-option-button__item {
   flex: 1 1 26rem;
   max-width: 26rem;
+  padding: 6px 0;
 }
 
 .gv-mockup {
