--- a/packages/OptionButton/src/option-button.scss
+++ b/packages/OptionButton/src/option-button.scss
@@ -54,7 +54,12 @@
 }
 
 .ids-option-button {
+  box-sizing: border-box;
   position: relative;
+
+  & * {
+    box-sizing: border-box;
+  }
 
   &__radio {
     height: 0;
